--- a/core/build.gradle
+++ b/core/build.gradle
@@ -3,7 +3,12 @@ eclipse.project.name = appName + '-core'
 
 dependencies {
   api "com.badlogicgames.gdx:gdx:$gdxVersion"
+  api "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
+
   implementation "com.github.MrStahlfelge.gdx-websockets:core:$wsVersion"
+  implementation "com.badlogicgames.gdx:gdx-freetype:$gdxVersion"
+
+
   if(enableGraalNative == 'true') {
     implementation "io.github.berstanio:gdx-svmhelper-annotations:$graalHelperVersion"
   }
