--- a/android/build.gradle
+++ b/android/build.gradle
@@ -9,7 +9,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 
 android {
-  namespace "com.miniflag"
+  namespace "com.orbsofaegir"
   compileSdk 34
   sourceSets {
     main {
@@ -31,7 +31,7 @@ android {
 		}
   }
   defaultConfig {
-    applicationId 'com.miniflag'
+    applicationId 'com.orbsofaegir'
     minSdkVersion 19
     targetSdkVersion 34
     versionCode 1
@@ -129,7 +129,7 @@ tasks.register('run', Exec) {
   }
 
   def adb = path + "/platform-tools/adb"
-  commandLine "$adb", 'shell', 'am', 'start', '-n', 'com.miniflag/com.miniflag.android.AndroidLauncher'
+  commandLine "$adb", 'shell', 'am', 'start', '-n', 'com.orbsofaegir/com.orbsofaegir.android.AndroidLauncher'
 }
 
 eclipse.project.name = appName + "-android"
